--- a/package.json
+++ b/package.json
@@ -5,7 +5,8 @@
   "main": "app.js",
   "scripts": {
     "test": "jest",
-    "devStart": "nodemon ./src/app.js"
+    "devStart": "nodemon ./src/app.js",
+    "start": "node src/app.js"
   },
   "keywords": [],
   "author": "",
